samples/_failures_safe/1761078055_54a47b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_30705664.c:168: error: expected ‘;’, ‘,’ or ‘)’ at end of input
